[gd_scene load_steps=2 format=3 uid="uid://bjf3t8vkg6dgj"]

[ext_resource type="Script" uid="uid://c45sne60ymidj" path="res://nodes/plane/plane.gd" id="1_8ukon"]

[node name="plane" type="CharacterBody2D"]
script = ExtResource("1_8ukon")

[node name="direction" type="Polygon2D" parent="."]
color = Color(1, 0, 1, 0)
polygon = PackedVector2Array(72, -8, 80, 0, 72, 8)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox"]
polygon = PackedVector2Array(-56, 0, -48, -8, -32, -8, 0, -16, 48, -16, 64, 0, 48, 16, 0, 16, -32, 8, -48, 8)

[node name="body" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="body"]
rotation = 1.5708
polygon = PackedVector2Array(0, -64, 16, -48, 16, -24, 64, -8, 64, 8, 16, 0, 8, 32, 8, 48, 24, 56, 24, 64, 0, 56, -24, 64, -24, 56, -8, 48, -8, 32, -16, 0, -64, 8, -64, -8, -16, -24, -16, -48)
uv = PackedVector2Array(0, -64, 16, -48, 16, -24, 64, -8, 64, 8, 16, 0, 8, 32, 8, 48, 24, 56, 24, 64, 0, 56, -24, 64, -24, 56, -8, 48, -8, 32, -16, 0, -64, 8, -64, -8, -16, -24, -16, -48)

[node name="Polygon2D6" type="Polygon2D" parent="body"]
rotation = 1.5708
color = Color(0.691357, 0.691357, 0.691357, 1)
polygon = PackedVector2Array(-64, -8, -16, -24, -16, 0, -64, 8)

[node name="Polygon2D7" type="Polygon2D" parent="body"]
rotation = 1.5708
color = Color(0.690196, 0.690196, 0.690196, 1)
polygon = PackedVector2Array(16, -24, 64, -8, 64, 8, 16, 0)

[node name="Polygon2D2" type="Polygon2D" parent="body"]
rotation = 1.5708
color = Color(0, 1, 1, 1)
polygon = PackedVector2Array(-16, -48, -8, -56, -8, -48, -16, -40)

[node name="Polygon2D3" type="Polygon2D" parent="body"]
rotation = 1.5708
color = Color(0, 1, 1, 1)
polygon = PackedVector2Array(8, -56, 8, -48, 16, -40, 16, -48)

[node name="Polygon2D4" type="Polygon2D" parent="body"]
rotation = 1.5708
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(64, 0, 64, 8, 56, 0)

[node name="Polygon2D5" type="Polygon2D" parent="body"]
rotation = 1.5708
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-64, 0, -56, 0, -64, 8)

[node name="Polygon2D8" type="Polygon2D" parent="body"]
rotation = 1.5708
color = Color(0.690196, 0.690196, 0.690196, 1)
polygon = PackedVector2Array(-8, 48, 0, 56, 8, 48, 24, 56, 24, 64, 0, 56, -24, 64, -24, 56)

[node name="Polygon2D9" type="Polygon2D" parent="body"]
rotation = 1.5708
color = Color(0.194349, 0.194349, 0.194349, 1)
polygon = PackedVector2Array(0, 48, -2, 56, 0, 64, 2, 56)

[node name="turn_left" type="Node2D" parent="."]
visible = false

[node name="Polygon2D3" type="Polygon2D" parent="turn_left"]
color = Color(0.690196, 0.690196, 0.690196, 1)
polygon = PackedVector2Array(16, -16, 8, -32, -8, -32, 0, 0)

[node name="Polygon2D" type="Polygon2D" parent="turn_left"]
polygon = PackedVector2Array(-56, 0, -48, -8, -32, -8, 0, -16, 48, -16, 64, 0, 48, 16, 0, 16, -32, 8, -48, 8)

[node name="Polygon2D2" type="Polygon2D" parent="turn_left"]
color = Color(0.690196, 0.690196, 0.690196, 1)
polygon = PackedVector2Array(0, 0, -8, 32, 8, 32, 24, 0)

[node name="Polygon2D4" type="Polygon2D" parent="turn_left"]
color = Color(0.690196, 0.690196, 0.690196, 1)
polygon = PackedVector2Array(-56, 0, -48, 0, -56, 8, -64, 8)

[node name="Polygon2D5" type="Polygon2D" parent="turn_left"]
color = Color(0.196078, 0.196078, 0.196078, 1)
polygon = PackedVector2Array(-48, 0, -56, -16, -64, -16, -56, 0)

[node name="Polygon2D6" type="Polygon2D" parent="turn_left"]
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(-8, 32, 0, 24, 0, 32)

[node name="Polygon2D7" type="Polygon2D" parent="turn_left"]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-8, -32, 0, -32, 0, -24)

[node name="Polygon2D8" type="Polygon2D" parent="turn_left"]
color = Color(0, 1, 1, 1)
polygon = PackedVector2Array(48, -16, 48, 0, 64, 0)

[node name="turn_right" type="Node2D" parent="."]
visible = false

[node name="Polygon2D3" type="Polygon2D" parent="turn_right"]
color = Color(0.690196, 0.690196, 0.690196, 1)
polygon = PackedVector2Array(-8, 32, 0, 0, 16, 16, 8, 32)

[node name="Polygon2D" type="Polygon2D" parent="turn_right"]
polygon = PackedVector2Array(-56, 0, -48, -8, -32, -8, 0, -16, 48, -16, 64, 0, 48, 16, 0, 16, -32, 8, -48, 8)

[node name="Polygon2D2" type="Polygon2D" parent="turn_right"]
color = Color(0.690196, 0.690196, 0.690196, 1)
polygon = PackedVector2Array(-8, -32, 8, -32, 24, 0, 0, 0)

[node name="Polygon2D4" type="Polygon2D" parent="turn_right"]
color = Color(0.196078, 0.196078, 0.196078, 1)
polygon = PackedVector2Array(-56, 0, -48, 0, -56, 16, -64, 16)

[node name="Polygon2D5" type="Polygon2D" parent="turn_right"]
color = Color(0.690196, 0.690196, 0.690196, 1)
polygon = PackedVector2Array(-64, -8, -56, -8, -48, 0, -56, 0)

[node name="Polygon2D6" type="Polygon2D" parent="turn_right"]
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(-8, 32, 0, 24, 0, 32)

[node name="Polygon2D7" type="Polygon2D" parent="turn_right"]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-8, -32, 0, -24, 0, -32)

[node name="Polygon2D8" type="Polygon2D" parent="turn_right"]
color = Color(0, 1, 1, 1)
polygon = PackedVector2Array(48, 16, 48, 0, 64, 0)

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
